--- a/e_m_adventures/package.json
+++ b/e_m_adventures/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.3.0",
+    "mapbox-gl": "^2.6.0",
     "nanoid": "^3.1.22",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
