--- a/e_m_adventures/.eslintrc
+++ b/e_m_adventures/.eslintrc
@@ -34,6 +34,8 @@
     "no-shadow": "warn",
     // "jsx-ally/no-onchange": "warn",
     "jsx-a11y/no-onchange": "off",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "react/prop-types": "warn",
+    "react/jsx-no-constructed-context-values": "warn"
   }
 }
