--- a/e_m_adventures/.eslintrc
+++ b/e_m_adventures/.eslintrc
@@ -37,6 +37,7 @@
     "react/function-component-definition": "off",
     "react/prop-types": "warn",
     "react/jsx-no-constructed-context-values": "warn",
-    "react/jsx-props-no-spreading": "warn"
+    "react/jsx-props-no-spreading": "warn",
+    "no-return-await": "warn"
   }
 }
