--- a/e_m_adventures/.eslintrc
+++ b/e_m_adventures/.eslintrc
@@ -11,7 +11,7 @@
         "singleQuote": true
       }
     ],
-    "quotes": [2, "single"],
+    "quotes": [2, "single", { "allowTemplateLiterals": true }],
     "consistent-return": "off",
     "jsx-a11y/label-has-associated-control": [
       "error",
