--- a/e_m_adventures/.eslintrc
+++ b/e_m_adventures/.eslintrc
@@ -39,6 +39,7 @@
     "react/jsx-no-constructed-context-values": "warn",
     "react/jsx-props-no-spreading": "warn",
     "no-return-await": "warn",
-    "react/no-array-index-key": "warn"
+    "react/no-array-index-key": "warn",
+    "no-console": ["warn", { "allow": ["error"] }]
   }
 }
